# rust-book

./: .gitignore  readme.md
chapter-01/: main.rs
chapter-02/guessing_game/: .gitignore
chapter-02/guessing_game/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
control-flow-matching/: Cargo.toml
control-flow-matching/src/: main.rs
rest-api/: Cargo.toml
rest-api-00/: .env  Cargo.toml
rest-api-00/src/: main.rs
rest-api-00/src/user/: model.rs  routes.rs
rest-api-01/: .env  up-infra
rest-api-01/migrations/2020-04-08-012227_create_user/: up.sql
rest-api-01/migrations/2020-04-08-182648_email_verification_token/: down.sql
rest-api-01/src/: api_error.rs  main.rs
rest-api-01/src/email/: mod.rs
rest-api-01/src/email_verification_token/: model.rs
rest-api-01/src/user/: model.rs
rest-api/migrations/2020-04-08-182648_email_verification_token/: up.sql
rest-api/src/: db.rs
rest-api/src/auth/: routes.rs
rest-api/src/email/: api.rs
rest-api/src/email_verification_token/: mod.rs
rest-api/src/user/: routes.rs
rest-api/src/utils/: jwt.rs  mod.rs
rocket/: Cargo.toml
rocket-rest-api/: Cargo.toml
rocket-rest-api/src/: main.rs
snake-game/: Cargo.toml
snake-game/src/: draw.rs  game.rs  snake.rs
structs/src/: main.rs
todo-cli/: db.json
