[package]
name = "rest-api-00"
version = "0.1.0"
authors = ["Jucian0 <juciano@outlook.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt="1.0"
listenfd="0.3.3"
cargo-watch="7.4.1"
log="0.4"
env_logger="0.6"
dotenv="0.6"
serde = "1.0.113"
serde_json = "1.0.55"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"